--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
   <head>
-    <title>this is a mail-in-a-box</title>
+    <title>jzaia.net Homepage</title>
     <meta name="robots" content="noindex">
   </head>
   <body>
-    <h1>this is a mail-in-a-box</h1>
-    <p>take control of your email at <a href="https://mailinabox.email/">https://mailinabox.email/</a></p>
+    <h1>Welcome to jzaia.net</h1>
+    <p>test text</p>
   </body>
 </html>
