--- a/index.html
+++ b/index.html
@@ -14,6 +14,19 @@
   </head>
   <body>
 
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand" href="#">jzaia.net</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-buttons" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbar-buttons">
+        <div class="navbar-nav">
+          <a class="nav-item nav-link" href="#">test1</a>
+          <a class="nav-item nav-link" href="#">test2</a>
+        </div>
+      </div>
+    </nav>
+
     <h1>Welcome to jzaia.net</h1>
     <p>test text</p>
 
