--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
       </button>
       <div class="collapse navbar-collapse" id="navbar-buttons">
         <div class="navbar-nav">
-          <a class="nav-item nav-link" href="#">test1</a>
-          <a class="nav-item nav-link" href="#">test2</a>
+          <a class="nav-item nav-link" href="#">Home</a>
+          <a class="nav-item nav-link" href="resume.html">Resume</a>
+          <a class="nav-item nav-link" href="https://github.com/jzaia18/Major-Projects">Portfolio</a>
+          <a class="nav-item nav-link" href="https://github.com/jzaia18/Gumshoe-Website">Source Code</a>
         </div>
       </div>
     </nav>
