Update resume page with better spacing

--- a/resume.html
+++ b/resume.html
@@ -22,16 +22,18 @@
       </button>
       <div class="collapse navbar-collapse" id="navbar-buttons">
         <div class="navbar-nav">
-          <a class="nav-item nav-link" href="#">Home</a>
-          <a class="nav-item nav-link" href="resume.html">Resume</a>
+          <a class="nav-item nav-link" href="index.html">Home</a>
+          <a class="nav-item nav-link" href="#">Resume</a>
           <a class="nav-item nav-link" href="https://github.com/jzaia18/Major-Projects">Portfolio</a>
           <a class="nav-item nav-link" href="https://github.com/jzaia18/Gumshoe-Website">Source Code</a>
         </div>
       </div>
     </nav>
 
-    <img class="resume-pic" id="resume-pic0" src="https://github.com/jzaia18/Resume/raw/master/resume-0.png" />
-    <img class="resume-pic" id="resume-pic1" src="https://github.com/jzaia18/Resume/raw/master/resume-1.png" />
+    <div class="container" id="resume-container">
+      <img class="resume-pic" id="resume-pic0" src="https://github.com/jzaia18/Resume/raw/master/resume-0.png" />
+      <img class="resume-pic" id="resume-pic1" src="https://github.com/jzaia18/Resume/raw/master/resume-1.png" />
+    </div>
 
   </body>
 </html>
