--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>jzaia.net Homepage</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="shortcut icon" type="image/jpg" href="static/img/favicon.jpg"/>
     <meta name="robots" content="noindex">
 
     <!-- JQuery -->
