--- a/resume.html
+++ b/resume.html
@@ -3,7 +3,8 @@
     <title>Resume</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" href="base.css">
+    <link rel="stylesheet" href="static/css/base.css">
+    <link rel="shortcut icon" type="image/jpg" href="static/img/favicon.jpg"/>
     <meta name="robots" content="noindex">
 
     <!-- JQuery -->
