Add profile picture

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       </div>
     </nav>
 
+    <img src="static/img/linkedinpic.png" id="linkedin-pic" class="rounded-circle" alt="linkedin profile picture" />
     <h1>Welcome to jzaia.net</h1>
     <p>test text</p>
 
