--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <title>Home -- jzaia.net</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="static/css/base.css">
+    <link rel="stylesheet" href="static/css/index.css">
+
     <link rel="shortcut icon" type="image/jpg" href="static/img/favicon.jpg"/>
     <meta name="robots" content="noindex">
 
@@ -30,9 +33,11 @@
       </div>
     </nav>
 
-    <img src="static/img/linkedinpic.png" id="linkedin-pic" class="rounded-circle" alt="linkedin profile picture" />
     <h1>Welcome to jzaia.net</h1>
-    <p>test text</p>
+    <p>
+      <img src="static/img/linkedinpic.png" id="linkedin-pic" class="rounded-circle" alt="linkedin profile picture" />
+      test text
+    </p>
 
   </body>
 </html>
