Add basic information

--- a/index.html
+++ b/index.html
@@ -33,11 +33,28 @@
       </div>
     </nav>
 
-    <h1>Welcome to jzaia.net</h1>
-    <p>
-      <img src="static/img/linkedinpic.png" id="linkedin-pic" class="rounded-circle" alt="linkedin profile picture" />
-      Welcome to my personal website. Please see the above navbar for links to my resume, portfolio, and the source code for this website.
-    </p>
+    <div id="intro-container">
+      <h1>Welcome</h1>
+      <p>
+        Welcome to my personal website. My name is Jake Zaia, and I am an undergraduate student of Computer Science at the Rochester Institute of Technology (RIT). Please see the above navbar for links to my resume, portfolio, and the source code for this website. If you're looking for more information about who I am and why I bother having my own website (or contact information), keep reading to the sections below.
+      </p>
+
+      <h1>About Me</h1>
+      <p>
+        <img src="static/img/linkedinpic.png" id="linkedin-pic" class="rounded-circle" alt="linkedin profile picture" />
+      </p>
+
+      <h1>Contact</h1>
+      <p>
+        Feel free to reach me at one of the following emails:
+        <ul>
+          <li> <a href="mailto:&#106;&#97;&#107;&#101;&#64;&#106;&#122;&#97;&#105;&#97;&#46;&#110;&#101;&#116;">&#106;&#97;&#107;&#101;&#64;&#106;&#122;&#97;&#105;&#97;&#46;&#110;&#101;&#116;</a> for business inquiries</li>
+          <li> <a href="mailto:&#106;&#97;&#107;&#101;&#122;&#97;&#105;&#97;&#64;&#109;&#97;&#105;&#108;&#46;&#114;&#105;&#116;&#46;&#101;&#100;&#117;">&#106;&#97;&#107;&#101;&#122;&#97;&#105;&#97;&#64;&#109;&#97;&#105;&#108;&#46;&#114;&#105;&#116;&#46;&#101;&#100;&#117;</a> for academic opportunities and inquiries</li>
+        </ul>
+
+        Alternatively, feel free to connect with me on <a href="https://linkedin.com/in/jake-zaia">my linkedin</a> and send me a message there.
+      </p>
+    </div>
 
   </body>
 </html>
