Add about me section

--- a/index.html
+++ b/index.html
@@ -35,14 +35,27 @@
 
     <div id="intro-container">
       <h1>Welcome</h1>
-      <p>
-        Welcome to my personal website. My name is Jake Zaia, and I am an undergraduate student of Computer Science at the Rochester Institute of Technology (RIT). Please see the above navbar for links to my resume, portfolio, and the source code for this website. If you're looking for more information about who I am and why I bother having my own website (or contact information), keep reading to the sections below.
+      <p id="welcome-p">
+        Hello, I'm Jake Zaia, welcome to my personal website. Please see the above navbar for links to my resume, portfolio, and the source code for this website (licensed under GPLv2). If you're looking for more information about who I am or how to contact me, keep reading to the sections below.
       </p>
 
+      <br />
+
       <h1>About Me</h1>
-      <p>
-        <img src="static/img/linkedinpic.png" id="linkedin-pic" class="rounded-circle" alt="linkedin profile picture" />
-      </p>
+      <div id="about-me-split" class="row">
+
+        <div class="col-sm-2 col-xs-10">
+          <img src="static/img/linkedinpic.png" id="linkedin-pic" class="rounded-circle" alt="linkedin profile picture" />
+        </div>
+
+        <div class="col-sm-10 col-xs-12">
+          <p id="about-p">
+            My name is Jake Zaia, and I am an undergraduate student of computer science at the Rochester Institute of Technology (RIT), specializing in security, and working towards a double-minor in mathematics and computing security. I am an active participant in and proponent of the free and open source community here at RIT (where I serve as secretary of the RIT Linux User's Group) and generally throughout the internet. I am also a <a href="https://github.com/RockstarLang/rockstar">Certified Rockstar Developer</a> and minor contributor to the Rockstar Language project and community.
+          </p>
+        </div>
+      </div>
+
+      <br />
 
       <h1>Contact</h1>
       <p>
