--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 
     <div id="intro-container">
       <h1>Welcome</h1>
-      <p id="welcome-p">
-        Hello, I'm Jake Zaia, welcome to my personal website. Please see the above navbar for links to my resume, portfolio, and the source code for this website (licensed under GPLv2). If you're looking for more information about who I am or how to contact me, keep reading to the sections below.
+      <p class="welcome-p">
+        Hello, I'm Jake Zaia, welcome to my personal website. Please see the above navbar for links to my resume, portfolio, and the source code for this website (licensed under GPLv2). If you're looking for more information about who I am or how to contact me, keep reading to the sections below. If you're a recruiter and you want to ask me some questions or schedule a time to chat, please email me at one of the email addresses listed below.
       </p>
 
       <br />
@@ -49,8 +49,14 @@
         </div>
 
         <div class="col-sm-10 col-xs-12">
-          <p id="about-p">
+          <p class="about-p">
             My name is Jake Zaia, and I am an undergraduate student of computer science at the Rochester Institute of Technology (RIT), specializing in security, and working towards a double-minor in mathematics and computing security. I am an active participant in and proponent of the free and open source community here at RIT (where I serve as secretary of the RIT Linux User's Group) and generally throughout the internet. I am also a <a href="https://github.com/RockstarLang/rockstar">Certified Rockstar Developer</a> and minor contributor to the Rockstar Language project and community.
+          </p>
+          <p class="about-p">
+            I am a frequent attendee of hackathons (pre-covid), and have attended well over 20 across the state of New York. My teams and I always enjoy working hard to produce an interesting product, whether it be for the betterment of society or just a fun thing to make. For examples of some of these projects, please visit <a href="https://github.com/jzaia18/Major-Projects">my porfolio</a>, which lists many of my hackathon and school projects. I have also mentored hackathons on occasion and helped to ensure all participants were well informed and able to work.
+          </p>
+          <p class="about-p">
+            I am also a lifelong teacher and tutor, starting my tutoring career as a volunteer in high school, and continuing into the private sector in college. I love helping people learn and grow as I teach them computer science and mathematics in a way that's easy to understand. In total I have over 8 years of tutoring experience in computer science and mathematics, at the middle school, high school, college, and adult level. This experience spans various programming lanaguages and paradigms, and covers fields from computing fundamentals to object oriented languges to algorithm optimization and computer graphics.
           </p>
         </div>
       </div>
