Add new resume layout to work with private resume repo

--- a/resume.html
+++ b/resume.html
@@ -34,8 +34,8 @@
     </nav>
 
     <div class="container" id="resume-container">
-      <img class="resume-pic" id="resume-pic0" src="https://github.com/jzaia18/Resume/raw/master/resume-0.png" />
-      <img class="resume-pic" id="resume-pic1" src="https://github.com/jzaia18/Resume/raw/master/resume-1.png" />
+      <img class="resume-pic" id="resume-pic0" src="static/img/resume/resume-0.png" />
+      <img class="resume-pic" id="resume-pic1" src="static/img/resume/resume-1.png" />
     </div>
 
   </body>
