Update homepage with newer information

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div id="intro-container">
       <h1>Welcome</h1>
       <p class="welcome-p">
-        Hello, I'm Jake Zaia, welcome to my personal website. Please see the above navbar for links to my resume, portfolio, and the source code for this website (licensed under GPLv2). If you're looking for more information about who I am or how to contact me, keep reading to the sections below. If you're a recruiter and you want to ask me some questions or schedule a time to chat, please email me at one of the email addresses listed below.
+        Hello, I'm Jake Zaia, welcome to my personal website. Please see the above navbar for links to my <a href="static/resume/resume.pdf">resume</a>, <a href="https://github.com/jzaia18/Major-Projects">portfolio</a>, and the <a href="https://github.com/jzaia18/Gumshoe-Website">source code for this website</a> (licensed under GPLv2). If you're looking for more information about who I am or how to contact me, keep reading to the sections below. If you're a recruiter and you want to ask me some questions or schedule a time to chat, please email me at one of the email addresses listed below or contact me on <a href="https://linkedin.com/in/jake-zaia">my LinkedIn</a>.
       </p>
 
       <br />
@@ -49,14 +49,19 @@
         </div>
 
         <div class="col-sm-10 col-xs-12">
+          <h4>Education</h4>
           <p class="about-p">
-            My name is Jake Zaia, and I am an undergraduate student of computer science at the Rochester Institute of Technology (RIT), specializing in security, and working towards a double-minor in mathematics and computing security. I am an active participant in and proponent of the free and open source community here at RIT (where I serve as secretary of the RIT Linux User's Group) and generally throughout the internet. I am also a <a href="https://github.com/RockstarLang/rockstar">Certified Rockstar Developer</a> and minor contributor to the Rockstar Language project and community.
+            My name is Jake Zaia, and I am an undergraduate student of computer science at the Rochester Institute of Technology (RIT), specializing in security, and working towards a dual-minor in mathematics and computing security. After graduating I plan to continue to graduate school where I hope to study quantum computing. I am a frequent attendee of hackathons, and have attended well over 20 across the state of New York and the surrounding area. My teams and I always enjoy working hard to produce something interesting, whether it be for the betterment of society or just to make something fun. For examples of some of these projects, please visit <a href="https://github.com/jzaia18/Major-Projects">my portfolio</a>, which lists many of my hackathon and school projects. I have also mentored hackathons on occasion and provided administrative and technical knowledge to participants and organizers.
           </p>
+
+          <h4>FOSS Endeavors</h4>
           <p class="about-p">
-            I am a frequent attendee of hackathons (pre-covid), and have attended well over 20 across the state of New York. My teams and I always enjoy working hard to produce an interesting product, whether it be for the betterment of society or just a fun thing to make. For examples of some of these projects, please visit <a href="https://github.com/jzaia18/Major-Projects">my portfolio</a>, which lists many of my hackathon and school projects. I have also mentored hackathons on occasion and helped to ensure all participants were well informed and able to work.
+            This website, in addition to being open source itself, is being hosted through <a href="https://mailinabox.email">Mail-in-a-box</a>, which is an open source implementation of a mail, file storage, and web server. I am an active participant in and proponent of the free and open source community throughout the internet and here at RIT, where I serve as secretary of the <a href="https://ritlug.com">RIT Linux User's Group</a>. I love linux-y things, and encourage wider adoption of Linux for both technical and ethical reasons wherever I can. In addition, I am a <a href="https://github.com/RockstarLang/rockstar">Certified Rockstar Developer</a> and contributor to the Rockstar Language project and community.
           </p>
+
+          <h4>Tutoring</h4>
           <p class="about-p">
-            I am also a lifelong teacher and tutor, starting my tutoring career as a volunteer in high school, and continuing into the private sector in college. I love helping people learn and grow as I teach them computer science and mathematics in a way that's easy to understand. In total I have over 8 years of tutoring experience in computer science and mathematics, at the middle school, high school, college, and adult level. This experience spans various programming lanaguages and paradigms, and covers fields from computing fundamentals to object oriented languges to algorithm optimization and computer graphics.
+            I am a lifelong teacher and tutor. I started my tutoring career as a volunteer in high school, and continued into the private sector in college via <a href="https://www.wyzant.com/Tutors/JakeZCSTutoring">Wyzant</a>. I love helping people learn and grow as I teach them computer science and mathematics in a way that's easy to understand. In total I have over 8 years of tutoring experience in both computer science and mathematics, at the middle school, high school, college, and adult level. This experience spans various programming lanaguages and paradigms, and covers fields from computing fundamentals to object oriented languges to operating systems, embedded development, algorithm optimization and computer graphics.
           </p>
         </div>
       </div>
@@ -71,9 +76,8 @@
           <li> <a href="mailto:&#106;&#97;&#107;&#101;&#122;&#97;&#105;&#97;&#64;&#109;&#97;&#105;&#108;&#46;&#114;&#105;&#116;&#46;&#101;&#100;&#117;">&#106;&#97;&#107;&#101;&#122;&#97;&#105;&#97;&#64;&#109;&#97;&#105;&#108;&#46;&#114;&#105;&#116;&#46;&#101;&#100;&#117;</a> for academic opportunities and inquiries</li>
         </ul>
 
-        Alternatively, feel free to connect with me on <a href="https://linkedin.com/in/jake-zaia">my linkedin</a> and send me a message there.
+        Alternatively, feel free to connect with me on <a href="https://linkedin.com/in/jake-zaia">my LinkedIn</a> and send me a message there.
       </p>
     </div>
-
   </body>
 </html>
