Fix typos in Tutoring paragraph

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
           <h4>Tutoring</h4>
           <p class="about-p">
-            I am a lifelong teacher and tutor. I started my tutoring career as a volunteer in high school, and continued into the private sector in college via <a href="https://www.wyzant.com/Tutors/JakeZCSTutoring">Wyzant</a>. I love helping people learn and grow as I teach them computer science and mathematics in a way that's easy to understand. In total I have over 8 years of tutoring experience in both computer science and mathematics, at the middle school, high school, college, and adult level. This experience spans various programming lanaguages and paradigms, and covers fields from computing fundamentals to object oriented languges to operating systems, embedded development, algorithm optimization and computer graphics.
+            I am a lifelong teacher and tutor. I started my tutoring career as a volunteer in high school, and continued into the private sector in college via <a href="https://www.wyzant.com/Tutors/JakeZCSTutoring">Wyzant</a>. I love helping people learn and grow as I teach them computer science and mathematics in a way that's easy to understand. In total I have over 8 years of tutoring experience in both computer science and mathematics, at the middle school, high school, college, and adult level. This experience spans various programming languages and paradigms, and covers fields from computing fundamentals to object oriented languages to operating systems, embedded development, algorithm optimization and computer graphics.
           </p>
         </div>
       </div>
