Small wording changes

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div id="intro-container">
       <h1>Welcome</h1>
       <p class="welcome-p">
-        Hello, I'm Jake Zaia, welcome to my personal website. Please see the above navbar for links to my <a href="static/resume/resume.pdf">resume</a>, <a href="https://github.com/jzaia18/Major-Projects">portfolio</a>, and the <a href="https://github.com/jzaia18/Gumshoe-Website">source code for this website</a> (licensed under GPLv2). If you're looking for more information about who I am or how to contact me, keep reading to the sections below. If you're a recruiter and you want to ask me some questions or schedule a time to chat, please email me at one of the email addresses listed below or contact me on <a href="https://linkedin.com/in/jake-zaia">my LinkedIn</a>.
+        Hello, I'm Jake Zaia, welcome to my personal website. Please see the above navbar for links to my <a href="static/resume/resume.pdf">resume</a>, <a href="https://github.com/jzaia18/Major-Projects">portfolio</a>, and the <a href="https://github.com/jzaia18/Gumshoe-Website">source code for this website</a> (licensed under GPLv2). If you're looking for more information about who I am and what I do, keep reading to the sections below. If you're looking to get in contact with me and you want to ask me some questions or schedule a time to chat, please email me at one of the email addresses listed below or connect with me on <a href="https://linkedin.com/in/jake-zaia">my LinkedIn</a>.
       </p>
 
       <br />
