--- a/index.html
+++ b/index.html
@@ -52,17 +52,22 @@
         <div class="col-sm-10 col-xs-12">
           <h4>Education</h4>
           <p class="about-p">
-            My name is Jake Zaia, and I am an undergraduate student of computer science at the Rochester Institute of Technology (RIT), specializing in security, and working towards a dual-minor in mathematics and computing security. After graduating I plan to continue to graduate school where I hope to study quantum computing. I am a frequent attendee of hackathons, and have attended well over 20 across the state of New York and the surrounding area. My teams and I always enjoy working hard to produce something interesting, whether it be for the betterment of society or just to make something fun. For examples of some of these projects, please visit <a href="https://github.com/jzaia18/Major-Projects">my portfolio</a>, which lists many of my hackathon and school projects. I have also mentored hackathons on occasion and provided administrative and technical knowledge to participants and organizers.
+            I'm a senior undergraduate student of computer science at the Rochester Institute of Technology (RIT), specializing in security, and working towards a dual-minor in mathematics and computing security. After graduating in May 2023 I plan to continue to graduate school where I hope to study computing theory as it relates to quantum computing. I have a particular interest in computability, algorithm complexity, and cryptography as well as quantum computing in general. I am a frequent attendee of hackathons, and have attended well over 20 across the state of New York and the surrounding area. My teams and I always enjoy working hard to produce something interesting, whether it be for the betterment of society or just to make something fun. For examples of some of these projects, please visit <a href="https://github.com/jzaia18/Major-Projects">my portfolio</a>, which lists many of my hackathon, personal, and school projects. I have also mentored hackathons on occasion and provided administrative and technical knowledge to participants and organizers.
+          </p>
+
+          <h4>Work</h4>
+          <p class="about-p">
+            During my college career I have worked a series of internships spanning a wide breadth of computer science topics. Most notably I have worked for <a href="https://mitre.org">MITRE</a> in both a development and research capacity. My research was involved in symbolic manipulation of qubit states, whereas my development roles were mostly associated with an internal resource management research project and the F-35 project. I have worked directly for the U. S. government as a data scientist, and possess a security clearance due to this work. I have also worked for <a href="https://www.herricktechlabs.com">HTL</a>, as an embedded software developer working on software defined radio systems, and for <a href="https://www.morganstanley.com">Morgan Stanley</a> as a web developer for an internal website. In general, I'm always open to explore new opportunities to grow more as a developer. For a more detailed list of everything I've worked on, please see <a href="static/resume/resume.pdf">my resume</a>.
           </p>
 
           <h4>FOSS Endeavors</h4>
           <p class="about-p">
-            This website, in addition to being open source itself, is being hosted through <a href="https://mailinabox.email">Mail-in-a-box</a>, which is an open source implementation of a mail, file storage, and web server. I am an active participant in and proponent of the free and open source community throughout the internet and here at RIT, where I serve as secretary of the <a href="https://ritlug.com">RIT Linux User's Group</a>. I love linux-y things, and encourage wider adoption of Linux for both technical and ethical reasons wherever I can. In addition, I am a <a href="https://github.com/RockstarLang/rockstar">Certified Rockstar Developer</a> and contributor to the Rockstar Language project and community.
+            This website, in addition to being open source itself, is being hosted through <a href="https://mailinabox.email">Mail-in-a-box</a>, which is an open source implementation of a mail, file storage, and HTTP server. I am an active participant in and proponent of the free and open source community throughout the internet and here at RIT, where I served as secretary and currently serve as president of the <a href="https://ritlug.com">RIT Linux User's Group</a>. I love linux-y things, and encourage wider adoption of Linux for both technical and ethical reasons wherever I can. In addition, I am a <a href="https://github.com/RockstarLang/rockstar">Certified Rockstar Developer</a> and contributor to the Rockstar Language project and community.
           </p>
 
           <h4>Tutoring</h4>
           <p class="about-p">
-            I am a lifelong teacher and tutor. I started my tutoring career as a volunteer in high school, and continued into the private sector in college via <a href="https://www.wyzant.com/Tutors/JakeZCSTutoring">Wyzant</a>. I love helping people learn and grow as I teach them computer science and mathematics in a way that's easy to understand. In total I have over 8 years of tutoring experience in both computer science and mathematics, at the middle school, high school, college, and adult level. This experience spans various programming languages and paradigms, and covers fields from computing fundamentals to object oriented languages to operating systems, embedded development, algorithm optimization and computer graphics.
+            I am a lifelong teacher and tutor. I started my tutoring career as a volunteer in high school, and continued into the private sector in college via <a href="https://www.wyzant.com/Tutors/JakeZCSTutoring">Wyzant</a>. I love helping people learn and grow as I teach them computer science and mathematics in a way that's easy to understand. In total I have over 8 years of tutoring experience in both computer science and mathematics, at the middle school, high school, college, and adult level. This experience spans various programming languages and paradigms, and covers fields from computing fundamentals to object oriented languages to operating systems, pure theory, embedded development, algorithm optimization and computer graphics.
           </p>
         </div>
       </div>
@@ -71,9 +76,9 @@
 
       <h1>Contact</h1>
       <p>
-        Feel free to reach me at one of the following emails:
+        Feel free to reach out to me at one of the following emails:
         <ul>
-          <li> <a href="mailto:&#106;&#97;&#107;&#101;&#64;&#106;&#122;&#97;&#105;&#97;&#46;&#110;&#101;&#116;">&#106;&#97;&#107;&#101;&#64;&#106;&#122;&#97;&#105;&#97;&#46;&#110;&#101;&#116;</a> for business inquiries</li>
+          <li> <a href="mailto:&#106;&#097;&#107;&#101;&#122;&#097;&#105;&#097;&#048;&#048;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;">&#106;&#097;&#107;&#101;&#122;&#097;&#105;&#097;&#048;&#048;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;</a> for business inquiries</li>
           <li> <a href="mailto:&#106;&#97;&#107;&#101;&#122;&#97;&#105;&#97;&#64;&#109;&#97;&#105;&#108;&#46;&#114;&#105;&#116;&#46;&#101;&#100;&#117;">&#106;&#97;&#107;&#101;&#122;&#97;&#105;&#97;&#64;&#109;&#97;&#105;&#108;&#46;&#114;&#105;&#116;&#46;&#101;&#100;&#117;</a> for academic opportunities and inquiries</li>
         </ul>
 
