--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
       <h1>About Me</h1>
       <div id="about-me-split" class="row">
 
-        <div class="col-sm-2 col-xs-10">
+        <div class="col-xl-2 col-lg-3 col-md-12" style="text-align: center">
           <img src="static/img/linkedinpic.png" id="linkedin-pic" class="rounded-circle" alt="linkedin profile picture" />
         </div>
 
-        <div class="col-sm-10 col-xs-12">
+        <div class="col-xl-10 col-lg-9 col-md-12">
           <h4>Education</h4>
           <p class="about-p">
             I'm a senior undergraduate student of computer science at the Rochester Institute of Technology (RIT), specializing in security, and working towards a dual-minor in mathematics and computing security. After graduating in May 2023 I plan to continue to graduate school where I hope to study computing theory as it relates to quantum computing. I have a particular interest in computability, algorithm complexity, and cryptography as well as quantum computing in general. I am a frequent attendee of hackathons, and have attended well over 20 across the state of New York and the surrounding area. My teams and I always enjoy working hard to produce something interesting, whether it be for the betterment of society or just to make something fun. For examples of some of these projects, please visit <a href="https://github.com/jzaia18/Major-Projects">my portfolio</a>, which lists many of my hackathon, personal, and school projects. I have also mentored hackathons on occasion and provided administrative and technical knowledge to participants and organizers.
