--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="col-xl-10 col-lg-9 col-md-12">
           <h4>Education</h4>
           <p class="about-p">
-            I'm a senior undergraduate student of computer science at the Rochester Institute of Technology (RIT), specializing in security, and working towards a dual-minor in mathematics and computing security. After graduating in May 2023 I plan to continue to graduate school where I hope to study computing theory as it relates to quantum computing. Within the field of quantum computing theory, I have particular interests in computability, algorithm design, algorithm complexity, and cryptography. I am a frequent attendee of hackathons, and have attended well over 20 across the state of New York and the surrounding area. My teams and I always enjoy working hard to produce something interesting, whether it be for the betterment of society or just to make something fun. For examples of some of these projects, please visit <a href="https://github.com/jzaia18/Major-Projects">my portfolio</a>, which lists many of my hackathon, personal, and school projects. I have also mentored hackathons on occasion and provided administrative and technical knowledge to participants and organizers.
+            I'm currently a graduate student of computer science at Carnegie Mellon University working towards a masters degree in theoretical computer science. After I graduate, I plan to pursue a PhD with an emphasis on theoretical aspects of quantum computing. I graduated from the Rochester Institute of Technology (RIT) with a BS in computer science in 2023. While there, I specialized in computer science theory and cybersecurity, and completed a triple minor in mathematics, quantum technology, and computing security. Within the field of quantum computing, I have particular interests in computability, algorithm design, algorithm complexity, and cryptography.
           </p>
 
           <h4>Work</h4>
@@ -62,7 +62,10 @@
 
           <h4>FOSS Endeavors</h4>
           <p class="about-p">
-            This website, in addition to being open source itself, is being hosted through <a href="https://mailinabox.email">Mail-in-a-box</a>, which is an open source implementation of a mail, file storage, and HTTP server. I am an active participant in and proponent of the free and open source community throughout the internet and here at RIT, where I served as secretary and currently serve as president of the <a href="https://ritlug.com">RIT Linux User's Group</a>. I love linux-y things, and encourage wider adoption of Linux for both technical and ethical reasons wherever I can. In addition, I am a <a href="https://github.com/RockstarLang/rockstar">Certified Rockstar Developer</a> and contributor to the Rockstar Language project and community.
+            This website, in addition to being open source itself, is being hosted through <a href="https://mailinabox.email">Mail-in-a-box</a>, which is an open source implementation of a mail, file storage, and HTTP server. I am an active participant in and proponent of the free and open source community throughout the internet and at RIT, where I served as secretary and then as president of the <a href="https://ritlug.com">RIT Linux User's Group</a>. I love linux-y things, and encourage wider adoption of Linux for both technical and ethical reasons wherever I can. In addition, I am a <a href="https://github.com/RockstarLang/rockstar">Certified Rockstar Developer</a> and contributor to the Rockstar Language project and community.
+          </p>
+          <p class="about-p">
+              Moreover, I am a frequent attendee of hackathons, and have attended well over 20 across the state of New York and the surrounding area. My teams and I always enjoy working hard to produce something interesting, whether it be for the betterment of society or just to make something fun. For examples of some of these projects, please visit <a href="https://github.com/jzaia18/Major-Projects">my portfolio</a>, which lists many of my hackathon, personal, and school projects. I have also mentored hackathons on occasion and provided administrative and technical knowledge to participants and organizers.
           </p>
 
           <h4>Tutoring</h4>
@@ -79,7 +82,7 @@
         Feel free to reach out to me at one of the following emails:
         <ul>
           <li> <a href="mailto:&#106;&#097;&#107;&#101;&#122;&#097;&#105;&#097;&#048;&#048;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;">&#106;&#097;&#107;&#101;&#122;&#097;&#105;&#097;&#048;&#048;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;</a> for business inquiries</li>
-          <li> <a href="mailto:&#106;&#97;&#107;&#101;&#122;&#97;&#105;&#97;&#64;&#109;&#97;&#105;&#108;&#46;&#114;&#105;&#116;&#46;&#101;&#100;&#117;">&#106;&#97;&#107;&#101;&#122;&#97;&#105;&#97;&#64;&#109;&#97;&#105;&#108;&#46;&#114;&#105;&#116;&#46;&#101;&#100;&#117;</a> for academic opportunities and inquiries</li>
+          <li> <a href='m&#97;&#105;lto&#58;jza%69a&#64;a%6Edre&#119;%2E&#99;m&#117;&#46;%65du'>jzaia&#64;and&#114;&#101;w&#46;cm&#117;&#46;edu</a> for academic opportunities and inquiries</li>
         </ul>
 
         Alternatively, feel free to connect with me on <a href="https://linkedin.com/in/jake-zaia">my LinkedIn</a> and send me a message there.
